[package]
name = "microps-rs"
version = "0.1.0"
authors = ["akitsu-sanae <akitsu.sanae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
arrayvec = "*"
nix = "0.15"
libc = "0.2"
ifstructs = "0.1"

