[package]
name = "microps-rs"
version = "0.1.0"
authors = ["akitsu-sanae <akitsu.sanae@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1"
arrayvec = "*"
nix = "0.20"
libc = "0.2"
ifstructs = "0.1"
hexdump = "*"
lazy_static = "*"
chrono = "0.4"
uuid = { version="0.8", features=["v4"]}

